2010-04-01  Roland Levillain  <roland@lrde.epita.fr>

	Add a Swilena wrapper for mln::image2d<mln::point2d>.

	* image2d_point2d.i: New.
	* Makefile.am (wrappers): Add image2d_point2d.i.
	* python/Makefile.am (pyexec_LTLIBRARIES):
	Add _image2d_point2d.la.
	(nodist__image2d_point2d_la_SOURCES, _image2d_point2d_la_LIBADD):
	New.
	(CLEANFILES): Add $(nodist__image2d_point2d_la_SOURCES)
	image2d_point2d.py image2d_point2d.py[co].
	(nodist_python_PYTHON): Add image2d_point2d.py.
	(image2d_point2d-wrap.cc): Add dependencies.
	* python/swilena.py: Import image2d_point2d.

2010-04-01  Roland Levillain  <roland@lrde.epita.fr>

	Have Make generate the Swilena Python Shell (sps).

	* python/Makefile.am (EXTRA_DIST): Add sps-common.in, sps.in and
	sps-local.in.
	(edit): New.
	(sps, sps-local): New rules.

2010-02-08  Roland Levillain  <roland@lrde.epita.fr>

	Add a Swilena wrapper for mln::image2d<mln::value::rgb8>.

	* image2d_rgb8.i: New file.
	* Makefile.am (wrappers): Add image2d_rgb8.i.
	* python/swilena.py: Import the contents of module image2d_rgb8.
	* python/Makefile.am (pyexec_LTLIBRARIES): Add _image2d_rgb8.la.
	(nodist__image2d_rgb8_la_SOURCES, _image2d_rgb8_la_LIBADD): New.
	(CLEANFILES): Add $(nodist__image2d_rgb8_la_SOURCES)
	image2d_rgb8.py image2d_rgb8.py[co].
	(nodist_python_PYTHON): Add image2d_rgb8.py.
	(image2d_rgb8-wrap.cc): Add dependencies.

2010-02-08  Roland Levillain  <roland@lrde.epita.fr>

	Add a Swilena meta-wrapper for PPM I/O.

	* ppm.ixx: New file.
	* Makefile.am (meta_wrappers): Add ppm.ixx.

2010-02-08  Roland Levillain  <roland@lrde.epita.fr>

	Add a setter in the mln::image2d<T> meta-wrapper.

	* image2d.ixx (mln::image2d<T>::set): New method (extension).

2010-02-08  Roland Levillain  <roland@lrde.epita.fr>

	Add a Swilena wrapper for mln::value::rgb8.

	* rgb8.i: New file.
	* Makefile.am (wrappers): Add rgb8.i.
	* python/swilena.py: Import the contents of module rgb8.
	* python/Makefile.am (pyexec_LTLIBRARIES): Add _rgb8.la.