@@ -166,6 +166,22 @@ namespace mln
   %template(Name) mln::morpho::watershed::flooding< L, I, N >;
 %enddef
 
+/*-----------.
+| Max-tree.  |
+`-----------*/
+
+%{
+#include "mln/morpho/tree/max.hh"
+%}
+
+%include "mln/morpho/tree/max.hh"
+
+%define instantiate_max_tree(Name, I, N)
+  // Explicit instantiation of this trait for the return type.
+  %template() mln::trait::ch_value< I, mln_psite(I) >;
+  %template(Name) mln::morpho::tree::max< I, N >;
+%enddef
+
 /*-------------------------.
 | Instantiate everything.  |
 `-------------------------*/
@@ -185,4 +201,6 @@ namespace mln
   instantiate_opening_area(opening_area, I, N)
 
   instantiate_watershed_flooding(watershed_flooding, mln_value(I), I, N)
+
+  instantiate_max_tree(max_tree, I, N)
 %enddef
